tests/typecheck/should_run/T5570.hs
{-# LANGUAGE MagicHash #-}
module Main where

import GHC.Exts

main :: IO ()
main = print $ D# $ 3.0##
